2015-08-26  Anders Carlsson  <andersca@apple.com>

        Fix build.

        * wtf/WorkQueue.cpp:

2015-08-26  Anders Carlsson  <andersca@apple.com>

        Add and implement WorkQueue::concurrentApply
        https://bugs.webkit.org/show_bug.cgi?id=148488

        Reviewed by Geoffrey Garen.

        WorkQueue::concurrentApply is modeled after dispatch_apply, and on Cocoa it uses dispatch_apply directly.
        For other ports there's a generic concurrentApply implemented using our threading primitives.
        
        * wtf/NeverDestroyed.h:
        (WTF::LazyNeverDestroyed::operator->):
        * wtf/WorkQueue.cpp:
        (WTF::WorkQueue::concurrentApply):
        * wtf/WorkQueue.h:
        * wtf/cocoa/WorkQueueCocoa.cpp:
        (WTF::WorkQueue::concurrentApply):

2015-08-18  Zan Dobersek  <zdobersek@igalia.com>

        [GLib] GMainLoopSource should receive the std::function<> objects through rvalue references
        https://bugs.webkit.org/show_bug.cgi?id=147981

        Reviewed by Carlos Garcia Campos.

        Scheduling methods on GMainLoopSource and GThreadSafeMainLoopSource should
        have the std::function<> objects passed through rvalue references, and should
        move the passed-in objects forward when required.

        * wtf/glib/GMainLoopSource.cpp:
        (WTF::GMainLoopSource::schedule):
        (WTF::GMainLoopSource::scheduleAfterDelay):
        (WTF::GMainLoopSource::scheduleAndDeleteOnDestroy):
        (WTF::GMainLoopSource::scheduleAfterDelayAndDeleteOnDestroy):
        * wtf/glib/GMainLoopSource.h:
        * wtf/glib/GThreadSafeMainLoopSource.cpp:
        (WTF::GThreadSafeMainLoopSource::schedule):
        (WTF::GThreadSafeMainLoopSource::scheduleAfterDelay):
        * wtf/glib/GThreadSafeMainLoopSource.h:

2015-08-19  Filip Pizlo  <fpizlo@apple.com>

        Remove WTF::SpinLock
        https://bugs.webkit.org/show_bug.cgi?id=148208

        Reviewed by Geoffrey Garen.
