@@ -1,3 +1,15 @@
+2015-08-29  Zan Dobersek  <zdobersek@igalia.com>
+
+        [WTF] Improve a ParkingLot::parkConditionally() comment for a libstdc++ workaround
+        https://bugs.webkit.org/show_bug.cgi?id=148571
+
+        Reviewed by Filip Pizlo.
+
+        * wtf/ParkingLot.cpp:
+        (WTF::ParkingLot::parkConditionally): Adjust the comment about the workaround for
+        the libstdc++ std::condition_variable implementation, linking to the WebKit bug
+        that dissected the problem and the GCC bug that originally reported the problem.
+
 2015-08-26  Anders Carlsson  <andersca@apple.com>
 
         Fix build.
